# hooks

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_win-gcc.cmake
src/omnimix-banner/: CMakeLists.txt  defines.h  omnimix_banner.c
src/omnimix-banner/Style/: iidx25.h  iidx26.h  iidx27.h  iidx28.h  iidx29.h  iidx30.h
src/omnimix-dataloader/: CMakeLists.txt  defines.h  omnimix_dataloader.c
src/omnimix-dataloader/Style/: iidx25.h  iidx26.h  iidx27.h
